Fix bug in bytenote.CAction